Realicé nuevos cambios en los estilos

--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ header{
     font-family: 'Bebas Neue', cursive;
     text-align: center;
     font-size: 4rem;
-    background-color: rgb(140, 240, 198);
+    background-color: rgb(81, 82, 81);
     color: white;
 }
 
@@ -36,29 +36,52 @@ button{
     font-size: 2rem;
     font-family: 'Bebas Neue', cursive;
     color: white;
-    background-color: rgb(79, 139, 114);
+    background-color: rgb(56, 168, 34);
     text-align: center;
-    border-radius: 3rem;
-    border-color: rgb(79, 139, 114);
+    border-radius: 0rem;
+    border-color: rgb(36, 126, 18);
     padding: 0.5rem;    
+    box-shadow: 0px 0px 0.3rem  black;
 }
+button:active{
+    animation-name: clickboton;
+    animation-duration: 200ms;}
+
+@keyframes clickboton{
+    100%{
+        transform: scale(0.95);
+    }
+}
+
 
 .aumentar_disminuir_boton{
     padding-top: 0.01rem;
     padding-bottom: 0.1rem;
-    border-radius: 2rem;
+    border-radius: 0rem;
 }
 
 .botonTap{
     font-size: 4rem;
     padding: 2rem;
-    background-color: rgb(103, 241, 103);
-    border-color: rgb(89, 211, 89);
+    background-color: rgb(46, 46, 46);
+    border-color: rgb(88, 87, 87);
+}
+
+.botonTap:active{
+    animation-name: tapeo;
+    animation-duration: 300ms;
+}
+
+@keyframes tapeo{
+    100%{
+        opacity: calc(0.1);
+        transform: scale(1.3);
+    }
 }
 
 .botonDetener{
-    background-color: rgb(235, 131, 131);
-    border-color: rgb(235, 131, 131);
+    background-color: rgb(192, 37, 37);
+    border-color: rgb(124, 30, 30);
 }
 
 input{
@@ -69,7 +92,7 @@ input{
     font-size: 5rem;
     width: 12rem;
     border-radius: 20rem;
-    border-color: rgb(140, 240, 198);
+    border-color: rgb(0, 0, 0);
     border-style: dotted;
     ;
 }
@@ -81,5 +104,3 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
     }
 input[type=number] { -moz-appearance:textfield; }
-
-
