modifiqué el algoritmo para ejercicio ritmico

--- a/estilos.css
+++ b/estilos.css
@@ -112,6 +112,16 @@ input{
     ;
 }
 
+.estilosSecuencia{
+    color: white;
+    background-color: rgb(46, 46, 46);
+    margin-bottom: 2rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    border-radius: 3rem;
+    font-size: 2.5rem;
+}
+
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
